force-app/main/default/objects/maps__LiveSummaryStopRelationshipConfig__c/maps__LiveSummaryStopRelationshipConfig__c.object-meta.xml
<CustomObject>
    <label>Maps Live Summary Stop Config</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Summary Stop Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Summary Stop Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>