force-app/main/default/objects/maps__LiveSummaryStopRelationshipConfig__c/fields/maps__Distance__c.field-meta.xml
<CustomField>
    <fullName>maps__Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>