force-app/main/default/objects/maps__LiveSummaryStopRelationshipConfig__c/fields/maps__LookupFieldName__c.field-meta.xml
<CustomField>
    <fullName>maps__LookupFieldName__c</fullName>
    <label>Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>