force-app/main/default/objects/maps__LiveSummaryStopRelationshipConfig__c/fields/maps__MarkerLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__MarkerLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marker Layer</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Live Summary Stop Relationship Config</relationshipLabel>
    <relationshipName>LiveSummaryStopRelationshipConfig</relationshipName>
    <type>Lookup</type>
</CustomField>